@@ -5,7 +5,7 @@ namespace App\Console\Commands;
 use Carbon\Carbon;
 use App\Notification;
 use Illuminate\Console\Command;
-use App\Jobs\SendNotificationEmail;
+use App\Jobs\Notification\ScheduleNotification;
 
 class SendNotifications extends Command
 {
@@ -50,23 +50,8 @@ class SendNotifications extends Command
             }
 
             $account = $notification->contact->account;
-            $numberOfUsersInAccount = $account->users->count();
-            $counter = 1;
 
-            foreach ($account->users as $user) {
-                if ($user->shouldBeReminded($notification->trigger_date)) {
-                    if (! $account->hasLimitations()) {
-                        foreach ($account->users as $user) {
-                            dispatch(new SendNotificationEmail($notification, $user));
-                        }
-                    }
-
-                    if ($counter == $numberOfUsersInAccount) {
-                        $notification->delete();
-                    }
-                }
-                $counter++;
-            }
+            ScheduleNotification::dispatch($notification);
         }
     }
 }
